# Facial-Emotion-Recognition-PyTorch-ONNX

PyTorch/: FER_image.py  Pipfile  pyproject.toml
