[tool.poetry]
name = "emotion_reading_baseline_cnn"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.4.0"
pandas = "^1.0.1"
numpy = "^1.18.1"
matplotlib = "^3.2.0"
torchvision = "^0.5.0"
opencv-contrib-python = "^4.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
